--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri = mongodb+srv://JAYWONKIM:JAYWONKIM0413@depofenvkmla.9bwn84j.mongodb.net/BACKEND
 spring.data.mongodb.database = BACKEND
+spring.security.user.name = jaywonkim
+spring.security.user.password = jaywonkim0413
