--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.data.mongodb.uri = mongodb+srv://JAYWONKIM:JAYWONKIM0413@depofenvkmla.9bwn84j.mongodb.net/BACKEND
 spring.data.mongodb.database = BACKEND
+spring.session.store-type=mongodb
+quadrangle.app.jwtSecret = ==========JWT=AUTH=TOKEN=DEPARTMENT=OF=SCIENCE=AND=TECHNOLOGY=KMLA=x=IP=TEAM=QUADRANGLE==========
+quadrangle.app.jwtExpirationMs = 86400000
